@@ -12,6 +12,9 @@ mtw_struct.load_external("utilities/illusions")
 -- GMCP checker
 mtw_struct.load_external("utilities/gmcp_checking")
 
+-- conversion functions
+mtw_struct.load_external("utilities/conversion")
+
 -- crits
 mtw_struct.set_metatable_saved("crits")
 
